--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.1.54",
-    "@sveltejs/vite-plugin-svelte": "^2.4.5",
-    "@tsconfig/svelte": "^5.0.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tsconfig/svelte": "^5.0.4",
+    "svelte": "^5.15.0",
+    "svelte-check": "^4.1.1",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.5",
     "gh-pages": "^5.0.0",
-    "simple-svelte-autocomplete": "^2.5.2",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.6",
-    "tslib": "^2.6.0",
-    "typescript": "^5.0.2",
-    "unplugin-icons": "^0.16.5",
-    "vite": "^4.4.5"
+    "tslib": "^2.6.0"
   }
 }
