--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,6 +5,8 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    
+    "composite": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -19,6 +21,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
+    
   },
   "include": ["vite.config.ts"]
 }
