--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "gh-pages": "^5.0.0",
     "svelte": "^5.15.0",
     "svelte-check": "^4.1.1",
+    "svelte-preprocess": "^6.0.3",
+    "tslib": "^2.6.0",
     "typescript": "~5.6.2",
-    "vite": "^6.0.5",
-    "gh-pages": "^5.0.0",
-    "tslib": "^2.6.0"
+    "vite": "^6.0.5"
   }
 }
