--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@skeletonlabs/floating-ui-svelte": "^0.3.9",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
     "gh-pages": "^5.0.0",
